gamecontainer fix